--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,7 +4,8 @@ events { worker_connections 128; }
 http {
         include mimes.conf; #for custom file types
         default_type application/octet-stream;
-        access_log /srv/tesseract/conf/access.log combined;
+        #access_log /srv/tesseract/conf/access.log combined;
+        access_log off;
 
         client_body_temp_path /srv/tesseract/conf/tmp/client_body;
         proxy_temp_path /srv/tesseract/conf/tmp/proxy;
